[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kranix-io-sdk"
version = "1.0.0"
description = "Python SDK for the Kranix API — workloads, namespaces, logs, and SSE events."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/kranix_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"
